# Jinkies

./: .coverage  .gitignore  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  jinkies.spec  main.py  out.txt  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  chore.md  feature_request.md
.github/workflows/: build.yml
installer/windows/: jinkies.iss
mgmt/: README.md  SPRINT_PLAN.md  gen_issues_pdf.py  gen_issues_xlsx.py  jinkies-issues.xlsx  setup.sh
scripts/: build_linux.sh  build_macos.sh  build_windows.ps1  create_issues.sh
src/: __init__.py  app.py  audio.py  config.py  credential_store.py  dashboard.py  feed_import.py  feed_poller.py  models.py  notifier.py  settings_dialog.py  url_validation.py
tests/: conftest.py  test_app.py  test_audio.py  test_ci_workflows.py  test_config.py  test_credential_store.py  test_dashboard.py  test_feed_import.py  test_feed_poller.py  test_import_preview.py  test_integration_pipeline.py  test_lock.py  test_models.py  test_notifier.py  test_settings_dialog.py  test_url_validation.py  test_version.py
