[project]
name = "jinkies"
version = "0.1.0"
description = "Cross-platform Atom feed monitor with audio cues and desktop notifications"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "feedparser>=6.0.12",
    "keyring>=25.0.0",
    "pyside6>=6.10.2",
    "pytest>=9.0.2",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "pytest-qt>=4.5.0",
    "ruff>=0.15.1",
]

[tool.ruff]
target-version = "py313"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "D", "S"]
ignore = [
    "D100",    # missing docstring in public module (we use module-level docstrings selectively)
    "N802",    # Qt override method names use camelCase
    "D104",    # missing docstring in public package
    "S101",    # use of assert (needed in tests)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "D", "S"]

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"
